# blossom

./: CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  main  multi_cube.frag  multi_cube.sh  run.sh  vert.txt
.github/workflows/: cmake-ubuntu.yml
examples/: cube_spin.cpp  fullscreen_rectangle.cpp  lines.cpp  multi_cube.cpp  rectangle.cpp  rectangle_camera.cpp  rectangle_camera_ecs.cpp  tex.cpp  triangle.cpp  triangle_ecs.cpp  triangle_stress_test.cpp  triangles.cpp  view.cpp  waves.cpp
headers/: camera.h  circle.h  cube.h  entity_manager.h  grid.h  mesh.h  orthographic_camera.h  perspective_camera.h  rectangle.h  shader.h  sphere.h  transform.h  window.h
headers/components/: camera.h  camera_c.h  mesh.h  mesh_c.h  mvp_matrix.h  orthographic_camera.h  perspective_camera.h  transform.h  transform_c.h  transform_matrix.h  view_projection_matrix.h
headers/components/tags/: active_camera.h  dirty.h  dirty_transform.h
headers/factories/: camera.h  camera_factory.h  circle.h  circle_factory.h  cube.h  cube_factory.h  grid.h  grid_factory.h  line.h  mesh.h  mesh_factory.h  orthographic_camera.h  orthographic_camera_factory.h  perspective_camera.h  rectangle.h  rectangle_factory.h  sphere.h  sphere_factory.h
headers/systems/: base_system.h  camera.h  camera_system.h  mesh.h  mesh_system.h  orthographic_camera.h  perspective_camera.h  render.h  render_system.h  transform.h  transform_system.h
shaders/: default.frag  default.vert  default_lit.frag  light.frag  multi_cube.vert  rectangle.frag  rectangle.vert  triangle.frag  triangles.frag  triangles.vert  waves.frag  waves.vert
src/: camera.cpp  main.cpp  mesh.cpp  multi_cube.cpp  shader.cpp  window.cpp
tests/: entity_manager_test.cpp  mesh_test.cpp  run_shader_test.sh  shader_test.cpp
